crates/solidity-v2/testing/snapshots/binder_output/scoping/redeclared_contracts/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Identifier already declared.
   ╭─[input.sol:5:10]
   │
 5 │ contract A {
   │          ┬  
   │          ╰── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (7):
- Def: #1 ["A" @ input.sol:1:10] (contract)
- Def: #2 ["f" @ input.sol:2:14] (function, type: function () returns void)
- Def: #3 ["A" @ input.sol:5:10] (contract)
- Def: #4 ["g" @ input.sol:6:14] (function, type: function () returns void)
- Def: #5 ["Test" @ input.sol:9:10] (contract)
- Def: #6 ["a" @ input.sol:10:7] (state var, type: unresolved)
- Def: #7 ["test" @ input.sol:12:14] (function, type: function () returns void)

------------------------------------------------------------------------

References (6):
- Ref: ["A" @ input.sol:10:5] -> unresolved
- Ref: ["a" @ input.sol:13:9] -> #6
- Ref: ["f" @ input.sol:13:11] -> unresolved
- Ref: ["a" @ input.sol:14:9] -> #6
- Ref: ["g" @ input.sol:14:11] -> unresolved
- Ref: ["A" @ input.sol:15:13] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
    ╭─[input.sol:1:1]
    │
  1 │ contract A {
    │          ┬  
    │          ╰── name: 1
  2 │     function f() public {}
    │              ┬  
    │              ╰── name: 2
    │ 
  5 │ contract A {
    │          ┬  
    │          ╰── name: 3
  6 │     function g() public {}
    │              ┬  
    │              ╰── name: 4
    │ 
  9 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 5
 10 │     A a;
    │     ┬ ┬  
    │     ╰──── unresolved
    │       │  
    │       ╰── name: 6
    │ 
 12 │     function test() public {
    │              ──┬─  
    │                ╰─── name: 7
 13 │         a.f();
    │         ┬ ┬  
    │         ╰──── ref: 6
    │           │  
    │           ╰── unresolved
 14 │         a.g();
    │         ┬ ┬  
    │         ╰──── ref: 6
    │           │  
    │           ╰── unresolved
 15 │         new A();
    │             ┬  
    │             ╰── unresolved
────╯
